# git_backuper

./: .example_config.toml  .gitignore  README.md  pyproject.toml  windows_shortcut.cmd
src/git_backuper/: __init__.py  git_backuper.py
